net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkSecurityGroupTests/NetworkSecurityGroupWithRulesApiTest[2021-04-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-190156a4a359551752846a5fda8d84d9-bd1e34bf03b5ebf9-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "ed504e9091ecbf8c821d7b6f459330e9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:43 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "e1cba4a6-1107-486d-9b17-501a3c1df79d",
        "x-ms-ratelimit-remaining-subscription-reads": "11980",
        "x-ms-request-id": "e1cba4a6-1107-486d-9b17-501a3c1df79d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153744Z:e1cba4a6-1107-486d-9b17-501a3c1df79d"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg9475?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-76c4480217ed49d3380daab184809976-1bdd0b47c49e090f-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3b43be778f344740579ba89f3070d2ba",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:44 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "a9f088ce-3b5c-440b-987c-4a10e7c57386",
        "x-ms-ratelimit-remaining-subscription-writes": "1195",
        "x-ms-request-id": "a9f088ce-3b5c-440b-987c-4a10e7c57386",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153744Z:a9f088ce-3b5c-440b-987c-4a10e7c57386"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475",
        "name": "csmrg9475",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "313",
        "Content-Type": "application/json",
        "traceparent": "00-cb5cc6a881253aacd87ae33ec8a5a3fe-01e75c00053fe9f9-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "824f0202e7ef09f1d89906f2fe6b5884",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/d2d0d1d1-bfee-44df-875e-b2ab934791d4?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "7472",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:46 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "28bace24-91f7-4b35-be30-d5d70e1257a4",
        "x-ms-client-request-id": "824f0202e7ef09f1d89906f2fe6b5884",
        "x-ms-correlation-request-id": "7d37eb33-7f4f-4731-8cb5-b5f9b328ba6e",
        "x-ms-ratelimit-remaining-subscription-writes": "1194",
        "x-ms-request-id": "d2d0d1d1-bfee-44df-875e-b2ab934791d4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153747Z:7d37eb33-7f4f-4731-8cb5-b5f9b328ba6e"
      },
      "ResponseBody": {
        "name": "azsmnet4224",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
        "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
          "securityRules": [
            {
              "name": "azsmnet5909",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
              "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"c2c00110-a165-4370-9b0d-fc0cbe2052d0\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/d2d0d1d1-bfee-44df-875e-b2ab934791d4?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-cb5cc6a881253aacd87ae33ec8a5a3fe-861ffc1ff49f07fc-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "49e726a73c285454438567ae51a8a933",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:47 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f7083b9c-309c-46f4-a2f5-2955c24ee7de",
        "x-ms-client-request-id": "49e726a73c285454438567ae51a8a933",
        "x-ms-correlation-request-id": "e436da19-a20e-4355-a3a8-6ed9b33cc1f7",
        "x-ms-ratelimit-remaining-subscription-reads": "11979",
        "x-ms-request-id": "e561cb81-b986-47dc-9faa-a311eb9c94b1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153748Z:e436da19-a20e-4355-a3a8-6ed9b33cc1f7"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-cb5cc6a881253aacd87ae33ec8a5a3fe-0aa37846872f3360-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d61eecd89000f14b5dba8c0bc79f5d2f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7480",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:47 GMT",
        "ETag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3bae8682-24a7-4fa4-9af9-4674a1ec582d",
        "x-ms-client-request-id": "d61eecd89000f14b5dba8c0bc79f5d2f",
        "x-ms-correlation-request-id": "399dc9a8-2bcc-44c5-88a5-96713440487b",
        "x-ms-ratelimit-remaining-subscription-reads": "11978",
        "x-ms-request-id": "9e26886f-2aed-4754-97f5-12aa24b93e11",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153748Z:399dc9a8-2bcc-44c5-88a5-96713440487b"
      },
      "ResponseBody": {
        "name": "azsmnet4224",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
        "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
          "securityRules": [
            {
              "name": "azsmnet5909",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-05edc9c47619dfb40806564f6b5ef0f4-bcfef306c002468e-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d84bfce50f83775c8fe71939a9f7434d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7480",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:48 GMT",
        "ETag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "54ceae54-bc65-446a-95f2-50c5b3621d97",
        "x-ms-client-request-id": "d84bfce50f83775c8fe71939a9f7434d",
        "x-ms-correlation-request-id": "0cdc5816-0262-409c-998e-036f0352ce0f",
        "x-ms-ratelimit-remaining-subscription-reads": "11977",
        "x-ms-request-id": "b7249329-b583-4d7f-a88c-d75bec80fd6a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153748Z:0cdc5816-0262-409c-998e-036f0352ce0f"
      },
      "ResponseBody": {
        "name": "azsmnet4224",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
        "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
          "securityRules": [
            {
              "name": "azsmnet5909",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-471f9afbb0da08323c28f9b4afa452fe-4e905a365408b1bb-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bf7aec3add8b1608dbf6eb6db0498ca3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "8181",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:48 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b787e839-51ff-4fc3-8bdd-c1fcc5937a7a",
        "x-ms-client-request-id": "bf7aec3add8b1608dbf6eb6db0498ca3",
        "x-ms-correlation-request-id": "fa0af1eb-bfab-4f43-be75-c5d4bb2fd3de",
        "x-ms-ratelimit-remaining-subscription-reads": "11976",
        "x-ms-request-id": "df09c2b2-65a9-4cbe-833b-1ef80ce66824",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153749Z:fa0af1eb-bfab-4f43-be75-c5d4bb2fd3de"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet4224",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
            "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
              "securityRules": [
                {
                  "name": "azsmnet5909",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Test security rule",
                    "protocol": "Tcp",
                    "sourcePortRange": "655",
                    "destinationPortRange": "123-3500",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/networkSecurityGroups?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-8fa0aad59c9d727521767e7a7ff11393-4cf2a6dc349e448c-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "54c93728d15dc8af90a6471877114765",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "52291",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:49 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "2e76c6b7-36d3-41e5-8755-3be1b6049334",
        "x-ms-original-request-ids": [
          "8ea7030d-2b2e-4984-b44b-21f48bdb1811",
          "1281381a-f2d5-411c-9642-ea82f925993a",
          "94079c87-6d11-4858-900f-262b65f72c27"
        ],
        "x-ms-ratelimit-remaining-subscription-reads": "11975",
        "x-ms-request-id": "2e76c6b7-36d3-41e5-8755-3be1b6049334",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153750Z:2e76c6b7-36d3-41e5-8755-3be1b6049334"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet4224",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
            "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
              "securityRules": [
                {
                  "name": "azsmnet5909",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Test security rule",
                    "protocol": "Tcp",
                    "sourcePortRange": "655",
                    "destinationPortRange": "123-3500",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"209dc66a-4a3a-43ba-86fc-5dd16585fa79\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          },
          {
            "name": "NRMS-runnztc2q22ruvnet-1199",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199",
            "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "e6a69935-ad4a-443d-b177-0e6d0bdf2898",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/virtualNetworks/vnet-1199/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-77ii2aynewgdavnet-hdi-0809",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809",
            "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "bc057244-e333-4981-aebc-f99f3f7378d6",
              "securityRules": [
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-106",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-103",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-107",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-108",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-101",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-105",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-109",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-104",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/virtualNetworks/vnet-hdi-0809/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-3ammvlly5cgsyvnet-6379",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379",
            "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "85893a4b-a3d3-4d53-8bc5-af1af6dc1bc9",
              "securityRules": [
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-107",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-106",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-104",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-101",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-109",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-108",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-105",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-103",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/virtualNetworks/vnet-6379/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-a4mwcm5uxdxl4vnet-8017",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017",
            "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "09a97d6c-aac9-41fe-b97b-c2e316761813",
              "securityRules": [
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-101",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-107",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-109",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-105",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-106",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-104",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-108",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-103",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/virtualNetworks/vnet-8017/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-kbijcrymaw3z6vnet-5947",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947",
            "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "3f6bbd65-1b02-4e21-b2f4-ed8aa9ce1921",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/virtualNetworks/vnet-5947/subnets/default"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "581",
        "Content-Type": "application/json",
        "traceparent": "00-89c98e4d05310e27818d4bd7c478afa2-4776cdb8f5e120b6-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "dbd03f779d2507a4f434fc8d23eec746",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            },
            {
              "properties": {
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/398ff15b-e5cb-4f5f-afbc-d7eca09426e7?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "8429",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:49 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4ab686fa-b56a-414a-bd51-b4ef7aebc89a",
        "x-ms-client-request-id": "dbd03f779d2507a4f434fc8d23eec746",
        "x-ms-correlation-request-id": "2ee8f453-2a0c-4146-ba76-eb4ec2a2ea16",
        "x-ms-ratelimit-remaining-subscription-writes": "1193",
        "x-ms-request-id": "398ff15b-e5cb-4f5f-afbc-d7eca09426e7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153750Z:2ee8f453-2a0c-4146-ba76-eb4ec2a2ea16"
      },
      "ResponseBody": {
        "name": "azsmnet4224",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
        "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
          "securityRules": [
            {
              "name": "azsmnet5909",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "azsmnet2740",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet2740",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"879d9fd4-5268-46aa-b2db-b651d2fa6eff\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/398ff15b-e5cb-4f5f-afbc-d7eca09426e7?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-89c98e4d05310e27818d4bd7c478afa2-f260bc42732cb9e8-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "70f686aeb1798b7d93c16028d422a4a1",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:49 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "388fe7bd-bf07-4bda-b405-231e55f29987",
        "x-ms-client-request-id": "70f686aeb1798b7d93c16028d422a4a1",
        "x-ms-correlation-request-id": "0fdd3c4f-3627-42a5-b68d-1498181f85de",
        "x-ms-ratelimit-remaining-subscription-reads": "11974",
        "x-ms-request-id": "2556ce98-6a2e-4c17-89eb-3e216c2f4bf7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153750Z:0fdd3c4f-3627-42a5-b68d-1498181f85de"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-89c98e4d05310e27818d4bd7c478afa2-8e7cff0f0c6cc793-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "01bd00ded50088374f669e736dbf7104",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "8438",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:50 GMT",
        "ETag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8b51aa7d-e7f5-4aeb-994b-474235bb7e07",
        "x-ms-client-request-id": "01bd00ded50088374f669e736dbf7104",
        "x-ms-correlation-request-id": "85409d77-0279-4564-a474-c99d9c543538",
        "x-ms-ratelimit-remaining-subscription-reads": "11973",
        "x-ms-request-id": "cab80126-a368-41e1-97f0-ff206e92e312",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153751Z:85409d77-0279-4564-a474-c99d9c543538"
      },
      "ResponseBody": {
        "name": "azsmnet4224",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
        "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
          "securityRules": [
            {
              "name": "azsmnet5909",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "azsmnet2740",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet2740",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-5e83edca020273b42232bb566e6f19de-f8d3078d23d7d9e1-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "9ddf329556f8a9cdf885de6d8ec7941a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "8438",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:50 GMT",
        "ETag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8114d917-4abb-4206-8a75-999d9e02422e",
        "x-ms-client-request-id": "9ddf329556f8a9cdf885de6d8ec7941a",
        "x-ms-correlation-request-id": "0b271420-8555-4a28-bbb2-38b72a2fdb8c",
        "x-ms-ratelimit-remaining-subscription-reads": "11972",
        "x-ms-request-id": "d2ca7058-f121-492e-ab3b-1c3be6478075",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153751Z:0b271420-8555-4a28-bbb2-38b72a2fdb8c"
      },
      "ResponseBody": {
        "name": "azsmnet4224",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224",
        "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "10b866d8-6f37-4994-8b6a-5f6b0c6754b7",
          "securityRules": [
            {
              "name": "azsmnet5909",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet5909",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "azsmnet2740",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/securityRules/azsmnet2740",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-5e5023fc8c096749db39b1fa27839f30-543ce428e99e10f7-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "95058e0d9d32d8c94e6e211213091ed4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "4455",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:51 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e7e227b1-892f-44cb-8cab-13cbfd28aa2f",
        "x-ms-client-request-id": "95058e0d9d32d8c94e6e211213091ed4",
        "x-ms-correlation-request-id": "cef54c47-3051-4d4d-8219-9a395266d9b8",
        "x-ms-ratelimit-remaining-subscription-reads": "11971",
        "x-ms-request-id": "20caa6d7-8a9f-4e6e-a181-4d692e6fa189",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153752Z:cef54c47-3051-4d4d-8219-9a395266d9b8"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "AllowVnetInBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetInBound",
            "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowAzureLoadBalancerInBound",
            "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllInBound",
            "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowVnetOutBound",
            "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/AllowInternetOutBound",
            "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224/defaultSecurityRules/DenyAllOutBound",
            "etag": "W/\"3a0e8f66-0a60-4e14-96ba-e56a9b2cf175\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups/azsmnet4224?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d17fa1fa4ddbf3cf6fd72be3cc5dcc9a-5ee469282fc19f82-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a1935c50064388a83314097bf7caf987",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/cc0b590c-a097-4573-b0bc-281116f2c3c5?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:37:51 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/cc0b590c-a097-4573-b0bc-281116f2c3c5?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0ea6a106-d594-4d4c-8ad6-c7d1532cea23",
        "x-ms-client-request-id": "a1935c50064388a83314097bf7caf987",
        "x-ms-correlation-request-id": "3fde54c6-22f2-41cb-bee5-037f50c19e7b",
        "x-ms-ratelimit-remaining-subscription-deletes": "14997",
        "x-ms-request-id": "cc0b590c-a097-4573-b0bc-281116f2c3c5",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153752Z:3fde54c6-22f2-41cb-bee5-037f50c19e7b"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/cc0b590c-a097-4573-b0bc-281116f2c3c5?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d17fa1fa4ddbf3cf6fd72be3cc5dcc9a-cfd1e9968d60749d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "311c0967f33406d7e57d621d934ee184",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:52 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "64de32d0-0a95-4499-aa98-50aaa84b9c97",
        "x-ms-client-request-id": "311c0967f33406d7e57d621d934ee184",
        "x-ms-correlation-request-id": "a23440bd-4c0d-4c08-a026-b8f4ae940ae7",
        "x-ms-ratelimit-remaining-subscription-reads": "11970",
        "x-ms-request-id": "94353aa3-1ccb-4968-8622-d3625f6aa764",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153753Z:a23440bd-4c0d-4c08-a026-b8f4ae940ae7"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9475/providers/Microsoft.Network/networkSecurityGroups?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-0a8dbb4fbae0575a78214576cf0f3c70-f715e9fe32e743d0-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8f4099743fa2741a8a9a383db71e5378",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:52 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "bf7c20ce-11c4-4db8-a932-7578def6b8b9",
        "x-ms-client-request-id": "8f4099743fa2741a8a9a383db71e5378",
        "x-ms-correlation-request-id": "cbb25cee-0b40-4599-99c6-2f7f5494ac52",
        "x-ms-ratelimit-remaining-subscription-reads": "11969",
        "x-ms-request-id": "b1cc8b10-8541-4ebf-9139-bfd30ebc038c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153753Z:cbb25cee-0b40-4599-99c6-2f7f5494ac52"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "535330740",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
